entity_macros/tests/ui/derive/ent/missing-type-value-for-edge-attr.stderr
error: Unexpected meta-item format `word` at my_edge/edge/type
 --> $DIR/missing-type-value-for-edge-attr.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
